restrict methods on more paths

--- a/nginx/etc/nginx/grip-bmegio.ohsu.edu.conf
+++ b/nginx/etc/nginx/grip-bmegio.ohsu.edu.conf
@@ -50,12 +50,25 @@
   # whitelist
   ##
 
-  location ~ ^/v1/(.*/schema) {
+  location ~ /v1/(.*/schema)$ {
+    add_header Allow "GET, HEAD" always;
+    limit_except GET HEAD {
+      deny all;
+    }
     proxy_buffering off;
     proxy_pass http://grip:8201/v1/$1;
     break;
   }
-  location ~ ^/v1/(graph)/?$ {
+  location ~ /v1/(.*/label)$ {
+    add_header Allow "GET, HEAD" always;
+    limit_except GET HEAD {
+      deny all;
+    }
+    proxy_buffering off;
+    proxy_pass http://grip:8201/v1/$1;
+    break;
+  }
+  location ~ /v1/(graph)/?$ {
     add_header Allow "GET, HEAD" always;
     limit_except GET HEAD {
       deny all;
@@ -72,18 +85,40 @@
   # our protected "landing page"
   location /analyze/access {
     include /etc/nginx/protected.conf;
-    root /usr/share/nginx/bmegio.ohsu.edu;
+    root /usr/share/nginx/bmeg.io;
     try_files $uri $uri/index.html $uri.html =404;
   }
+  # /v1/graph/<graph>/query
+  location ~ /v1/(.*/query)$ {
+    add_header Allow "POST, HEAD" always;
+    limit_except POST HEAD {
+      deny all;
+    }
+    include /etc/nginx/protected.conf;
+    proxy_buffering off;
+    proxy_pass http://grip:8201/$1;
+  }
   location /grip/ {
+    add_header Allow "GET, HEAD" always;
+    limit_except GET HEAD {
+      deny all;
+    }
     include /etc/nginx/protected.conf;
     proxy_pass http://grip:8201/;
   }
   location /api/ {
+    add_header Allow "GET, HEAD" always;
+    limit_except GET HEAD {
+      deny all;
+    }
     include /etc/nginx/protected.conf;
     proxy_pass http://grip:8201/;
   }
   location /v1/ {
+    add_header Allow "GET, HEAD" always;
+    limit_except GET HEAD {
+      deny all;
+    }
     include /etc/nginx/protected.conf;
     proxy_pass http://grip:8201/v1/;
   }
