--- a/nginx/etc/nginx/grip-bmeg.io.conf
+++ b/nginx/etc/nginx/grip-bmeg.io.conf
@@ -96,7 +96,7 @@
     }
     include /etc/nginx/protected.conf;
     proxy_buffering off;
-    proxy_pass http://grip:8201/$1;
+    proxy_pass http://grip:8201/v1/$1;
   }
   location /grip/ {
     add_header Allow "GET, HEAD" always;
