--- a/nginx/etc/nginx/grip-bmegio.ohsu.edu.conf
+++ b/nginx/etc/nginx/grip-bmegio.ohsu.edu.conf
@@ -85,7 +85,7 @@
   # our protected "landing page"
   location /analyze/access {
     include /etc/nginx/protected.conf;
-    root /usr/share/nginx/bmeg.io;
+    root /usr/share/nginx/bmegio.ohsu.edu;
     try_files $uri $uri/index.html $uri.html =404;
   }
   # /v1/graph/<graph>/query
@@ -96,7 +96,7 @@
     }
     include /etc/nginx/protected.conf;
     proxy_buffering off;
-    proxy_pass http://grip:8201/$1;
+    proxy_pass http://grip:8201/v1/$1;
   }
   location /grip/ {
     add_header Allow "GET, HEAD" always;
