--- a/nginx/etc/nginx/nginx.conf
+++ b/nginx/etc/nginx/nginx.conf
@@ -99,12 +99,11 @@ http {
 	lua_package_path '/etc/nginx/lua/?.lua;';
 
 	include /etc/nginx/conf.d/*.conf;
-	# include /etc/nginx/sites-enabled/bmeg.io;
-	# include /etc/nginx/sites-enabled/bmegio.ohsu.edu;
-	# include /etc/nginx/sites-enabled/gen3-ohsu.ddns.net;
-	# include /etc/nginx/sites-enabled/bmeg-jupyter.ddns.net;
-	# include /etc/nginx/sites-enabled/recount.bio;
-	include /etc/nginx/sites-enabled/bmeg-gen3.ddns.net;
-	include /etc/nginx/sites-enabled/bmegio-test.ddns.net;
+	include /etc/nginx/sites-enabled/bmeg.io;
+	include /etc/nginx/sites-enabled/bmegio.ohsu.edu;
+	include /etc/nginx/sites-enabled/gen3-ohsu.ddns.net;
+	include /etc/nginx/sites-enabled/bmeg-jupyter.ddns.net;
+	include /etc/nginx/sites-enabled/recount.bio;
+	include /etc/nginx/sites-enabled/commons.bmeg.io;
 
 }
