--- a/nginx/etc/nginx/nginx.conf
+++ b/nginx/etc/nginx/nginx.conf
@@ -104,6 +104,7 @@ http {
 	include /etc/nginx/sites-enabled/gen3-ohsu.ddns.net;
 	include /etc/nginx/sites-enabled/bmeg-jupyter.ddns.net;
 	include /etc/nginx/sites-enabled/recount.bio;
+	include /etc/nginx/sites-enabled/methylation.recount.bio;
 	include /etc/nginx/sites-enabled/commons.bmeg.io;
 
 }
